manifests/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/benphelps/homepage:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: homepage-config
              mountPath: /app/config
            - name: homepage-assets
              mountPath: /app/public/fonts
      volumes:
        - name: homepage-config
          configMap:
            name: homepage-config
        - name: homepage-assets
          configMap:
            name: homepage-assets
