manifests/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-dashboard
spec:
  selector:
    app: flask-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
